samples/_failures_safe/1760884741_e68216_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35a311ea.c: In function ‘main’:
./samples/SAFE/__tmp_35a311ea.c:163:12: error: missing terminating " character
  163 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_35a311ea.c:163:5: error: expected expression at end of input
  163 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_35a311ea.c:163:5: error: expected declaration or statement at end of input
